tests/suite/errors/e03_unknown_type.rs
// err: unknown type `Banana`

fn greet(x: Banana) {
    println!("hi");
}

fn main() {
    greet(0);
}
